# minesweeper

./: CMakeLists.txt
include/: consts.hpp  game.hpp  grid.hpp
src/: game.cpp  grid.cpp  main.cpp
